// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`templateWithHoc exporting a arrow function with Hoc skipInitialProps: false 1`] = `
"import __i18nConfig from \\"@next-translate-root/i18n\\";
import __appWithI18n from \\"next-translate/appWithI18n\\";
(\\"$SomeString$\\");
$$SomeString$$ & $SomeString$ & \`$SomeString$\`;
(\\".cssClass{content:' ';\\");
('Hello \\"world\\"');
import someHoc from \\"whatever\\";
const __Next_Translate__Page__88d9831a00__ = someHoc(() => {
  return <div>Hello world</div>;
});

export default __appWithI18n(__Next_Translate__Page__88d9831a00__, {
  ...__i18nConfig,
  isLoader: true,
  skipInitialProps: false,
  loadLocaleFrom: (l, n) =>
    import(\`@next-translate-root/locales/\${l}/\${n}\`).then((m) => m.default),
});
"
`;

exports[`templateWithHoc exporting a arrow function with Hoc skipInitialProps: true 1`] = `
"import __i18nConfig from \\"@next-translate-root/i18n\\";
import __appWithI18n from \\"next-translate/appWithI18n\\";
(\\"$SomeString$\\");
$$SomeString$$ & $SomeString$ & \`$SomeString$\`;
(\\".cssClass{content:' ';\\");
('Hello \\"world\\"');
import someHoc from \\"whatever\\";
const __Next_Translate__Page__88d9831a00__ = someHoc(() => {
  return <div>Hello world</div>;
});

export default __appWithI18n(__Next_Translate__Page__88d9831a00__, {
  ...__i18nConfig,
  isLoader: true,
  skipInitialProps: true,
  loadLocaleFrom: (l, n) =>
    import(\`@next-translate-root/locales/\${l}/\${n}\`).then((m) => m.default),
});
"
`;

exports[`templateWithHoc exporting a arrow function with getInitialProps skipInitialProps: false 1`] = `
"import __i18nConfig from \\"@next-translate-root/i18n\\";
import __appWithI18n from \\"next-translate/appWithI18n\\";
(\\"$SomeString$\\");
$$SomeString$$ & $SomeString$ & \`$SomeString$\`;
(\\".cssClass{content:' ';\\");
('Hello \\"world\\"');
const Page = () => <div>Hello world</div>;
Page.getInitialProps = () => ({});
const __Next_Translate__Page__88d9831a00__ = Page;

export default __appWithI18n(__Next_Translate__Page__88d9831a00__, {
  ...__i18nConfig,
  isLoader: true,
  skipInitialProps: false,
  loadLocaleFrom: (l, n) =>
    import(\`@next-translate-root/locales/\${l}/\${n}\`).then((m) => m.default),
});
"
`;

exports[`templateWithHoc exporting a arrow function with getInitialProps skipInitialProps: true 1`] = `
"import __i18nConfig from \\"@next-translate-root/i18n\\";
import __appWithI18n from \\"next-translate/appWithI18n\\";
(\\"$SomeString$\\");
$$SomeString$$ & $SomeString$ & \`$SomeString$\`;
(\\".cssClass{content:' ';\\");
('Hello \\"world\\"');
const Page = () => <div>Hello world</div>;
Page.getInitialProps = () => ({});
const __Next_Translate__Page__88d9831a00__ = Page;

export default __appWithI18n(__Next_Translate__Page__88d9831a00__, {
  ...__i18nConfig,
  isLoader: true,
  skipInitialProps: true,
  loadLocaleFrom: (l, n) =>
    import(\`@next-translate-root/locales/\${l}/\${n}\`).then((m) => m.default),
});
"
`;

exports[`templateWithHoc exporting a class with a getInitialProps static | exporting apart skipInitialProps: false 1`] = `
"import __i18nConfig from \\"@next-translate-root/i18n\\";
import __appWithI18n from \\"next-translate/appWithI18n\\";
(\\"$SomeString$\\");
$$SomeString$$ & $SomeString$ & \`$SomeString$\`;
(\\".cssClass{content:' ';\\");
('Hello \\"world\\"');
import React from \\"react\\";
class Page extends React.Component {
  static getInitialProps() {
    return {};
  }
  render() {
    return <div>Hello world</div>;
  }
}
const __Next_Translate__Page__88d9831a00__ = Page;

export default __appWithI18n(__Next_Translate__Page__88d9831a00__, {
  ...__i18nConfig,
  isLoader: true,
  skipInitialProps: false,
  loadLocaleFrom: (l, n) =>
    import(\`@next-translate-root/locales/\${l}/\${n}\`).then((m) => m.default),
});
"
`;

exports[`templateWithHoc exporting a class with a getInitialProps static | exporting apart skipInitialProps: true 1`] = `
"import __i18nConfig from \\"@next-translate-root/i18n\\";
import __appWithI18n from \\"next-translate/appWithI18n\\";
(\\"$SomeString$\\");
$$SomeString$$ & $SomeString$ & \`$SomeString$\`;
(\\".cssClass{content:' ';\\");
('Hello \\"world\\"');
import React from \\"react\\";
class Page extends React.Component {
  static getInitialProps() {
    return {};
  }
  render() {
    return <div>Hello world</div>;
  }
}
const __Next_Translate__Page__88d9831a00__ = Page;

export default __appWithI18n(__Next_Translate__Page__88d9831a00__, {
  ...__i18nConfig,
  isLoader: true,
  skipInitialProps: true,
  loadLocaleFrom: (l, n) =>
    import(\`@next-translate-root/locales/\${l}/\${n}\`).then((m) => m.default),
});
"
`;

exports[`templateWithHoc exporting a class with a getInitialProps static outside + one commented before skipInitialProps: false 1`] = `
"import __i18nConfig from \\"@next-translate-root/i18n\\";
import __appWithI18n from \\"next-translate/appWithI18n\\";
(\\"$SomeString$\\");
$$SomeString$$ & $SomeString$ & \`$SomeString$\`;
(\\".cssClass{content:' ';\\");
('Hello \\"world\\"');
import React from \\"react\\";
/*
export default class FakePage extends React.Component {
  render() {
    return <div>Hello world</div>
  }
} */
class Page extends React.Component {
  render() {
    return <div>Hello world</div>;
  }
}
// FakePage.getInitialProps = () => ({})
/*
  Page.getInitialProps = () => ({})
*/
Page.getInitialProps = () => ({});

export default __appWithI18n(Page, {
  ...__i18nConfig,
  isLoader: true,
  skipInitialProps: false,
  loadLocaleFrom: (l, n) =>
    import(\`@next-translate-root/locales/\${l}/\${n}\`).then((m) => m.default),
});
"
`;

exports[`templateWithHoc exporting a class with a getInitialProps static outside + one commented before skipInitialProps: true 1`] = `
"import __i18nConfig from \\"@next-translate-root/i18n\\";
import __appWithI18n from \\"next-translate/appWithI18n\\";
(\\"$SomeString$\\");
$$SomeString$$ & $SomeString$ & \`$SomeString$\`;
(\\".cssClass{content:' ';\\");
('Hello \\"world\\"');
import React from \\"react\\";
/*
export default class FakePage extends React.Component {
  render() {
    return <div>Hello world</div>
  }
} */
class Page extends React.Component {
  render() {
    return <div>Hello world</div>;
  }
}
// FakePage.getInitialProps = () => ({})
/*
  Page.getInitialProps = () => ({})
*/
Page.getInitialProps = () => ({});

export default __appWithI18n(Page, {
  ...__i18nConfig,
  isLoader: true,
  skipInitialProps: true,
  loadLocaleFrom: (l, n) =>
    import(\`@next-translate-root/locales/\${l}/\${n}\`).then((m) => m.default),
});
"
`;

exports[`templateWithHoc exporting a class with a getInitialProps static outside skipInitialProps: false 1`] = `
"import __i18nConfig from \\"@next-translate-root/i18n\\";
import __appWithI18n from \\"next-translate/appWithI18n\\";
(\\"$SomeString$\\");
$$SomeString$$ & $SomeString$ & \`$SomeString$\`;
(\\".cssClass{content:' ';\\");
('Hello \\"world\\"');
import React from \\"react\\";
class Page extends React.Component {
  render() {
    return <div>Hello world</div>;
  }
}
Page.getInitialProps = () => ({});

export default __appWithI18n(Page, {
  ...__i18nConfig,
  isLoader: true,
  skipInitialProps: false,
  loadLocaleFrom: (l, n) =>
    import(\`@next-translate-root/locales/\${l}/\${n}\`).then((m) => m.default),
});
"
`;

exports[`templateWithHoc exporting a class with a getInitialProps static outside skipInitialProps: true 1`] = `
"import __i18nConfig from \\"@next-translate-root/i18n\\";
import __appWithI18n from \\"next-translate/appWithI18n\\";
(\\"$SomeString$\\");
$$SomeString$$ & $SomeString$ & \`$SomeString$\`;
(\\".cssClass{content:' ';\\");
('Hello \\"world\\"');
import React from \\"react\\";
class Page extends React.Component {
  render() {
    return <div>Hello world</div>;
  }
}
Page.getInitialProps = () => ({});

export default __appWithI18n(Page, {
  ...__i18nConfig,
  isLoader: true,
  skipInitialProps: true,
  loadLocaleFrom: (l, n) =>
    import(\`@next-translate-root/locales/\${l}/\${n}\`).then((m) => m.default),
});
"
`;

exports[`templateWithHoc exporting a class with a getInitialProps static skipInitialProps: false 1`] = `
"import __i18nConfig from \\"@next-translate-root/i18n\\";
import __appWithI18n from \\"next-translate/appWithI18n\\";
(\\"$SomeString$\\");
$$SomeString$$ & $SomeString$ & \`$SomeString$\`;
(\\".cssClass{content:' ';\\");
('Hello \\"world\\"');
import React from \\"react\\";
class Page extends React.Component {
  static getInitialProps() {
    return {};
  }
  render() {
    return <div>Hello world</div>;
  }
}

export default __appWithI18n(Page, {
  ...__i18nConfig,
  isLoader: true,
  skipInitialProps: false,
  loadLocaleFrom: (l, n) =>
    import(\`@next-translate-root/locales/\${l}/\${n}\`).then((m) => m.default),
});
"
`;

exports[`templateWithHoc exporting a class with a getInitialProps static skipInitialProps: true 1`] = `
"import __i18nConfig from \\"@next-translate-root/i18n\\";
import __appWithI18n from \\"next-translate/appWithI18n\\";
(\\"$SomeString$\\");
$$SomeString$$ & $SomeString$ & \`$SomeString$\`;
(\\".cssClass{content:' ';\\");
('Hello \\"world\\"');
import React from \\"react\\";
class Page extends React.Component {
  static getInitialProps() {
    return {};
  }
  render() {
    return <div>Hello world</div>;
  }
}

export default __appWithI18n(Page, {
  ...__i18nConfig,
  isLoader: true,
  skipInitialProps: true,
  loadLocaleFrom: (l, n) =>
    import(\`@next-translate-root/locales/\${l}/\${n}\`).then((m) => m.default),
});
"
`;

exports[`templateWithHoc exporting a variable and with an existing HoC skipInitialProps: false 1`] = `
"import __i18nConfig from \\"@next-translate-root/i18n\\";
import __appWithI18n from \\"next-translate/appWithI18n\\";
(\\"$SomeString$\\");
$$SomeString$$ & $SomeString$ & \`$SomeString$\`;
(\\".cssClass{content:' ';\\");
('Hello \\"world\\"');
import withWrapper from \\"somewhere\\";
function Page() {
  return <div>Hello world</div>;
}
const anothervariable = withWrapper(Page);
const somevariable = anothervariable;
const __Next_Translate__Page__88d9831a00__ = somevariable;

export default __appWithI18n(__Next_Translate__Page__88d9831a00__, {
  ...__i18nConfig,
  isLoader: true,
  skipInitialProps: false,
  loadLocaleFrom: (l, n) =>
    import(\`@next-translate-root/locales/\${l}/\${n}\`).then((m) => m.default),
});
"
`;

exports[`templateWithHoc exporting a variable and with an existing HoC skipInitialProps: true 1`] = `
"import __i18nConfig from \\"@next-translate-root/i18n\\";
import __appWithI18n from \\"next-translate/appWithI18n\\";
(\\"$SomeString$\\");
$$SomeString$$ & $SomeString$ & \`$SomeString$\`;
(\\".cssClass{content:' ';\\");
('Hello \\"world\\"');
import withWrapper from \\"somewhere\\";
function Page() {
  return <div>Hello world</div>;
}
const anothervariable = withWrapper(Page);
const somevariable = anothervariable;
const __Next_Translate__Page__88d9831a00__ = somevariable;

export default __appWithI18n(__Next_Translate__Page__88d9831a00__, {
  ...__i18nConfig,
  isLoader: true,
  skipInitialProps: true,
  loadLocaleFrom: (l, n) =>
    import(\`@next-translate-root/locales/\${l}/\${n}\`).then((m) => m.default),
});
"
`;

exports[`templateWithHoc page with multiple commented "export default" + the correct one should do it right skipInitialProps: false 1`] = `
"import __i18nConfig from \\"@next-translate-root/i18n\\";
import __appWithI18n from \\"next-translate/appWithI18n\\";
(\\"$SomeString$\\");
$$SomeString$$ & $SomeString$ & \`$SomeString$\`;
(\\".cssClass{content:' ';\\");
('Hello \\"world\\"');
const Page = () => <div>Hello world</div>;
Page.getInitialProps = () => ({});
const __Next_Translate__Page__88d9831a00__ = Page;

export default __appWithI18n(__Next_Translate__Page__88d9831a00__, {
  ...__i18nConfig,
  isLoader: true,
  skipInitialProps: false,
  loadLocaleFrom: (l, n) =>
    import(\`@next-translate-root/locales/\${l}/\${n}\`).then((m) => m.default),
});
"
`;

exports[`templateWithHoc page with multiple commented "export default" + the correct one should do it right skipInitialProps: true 1`] = `
"import __i18nConfig from \\"@next-translate-root/i18n\\";
import __appWithI18n from \\"next-translate/appWithI18n\\";
(\\"$SomeString$\\");
$$SomeString$$ & $SomeString$ & \`$SomeString$\`;
(\\".cssClass{content:' ';\\");
('Hello \\"world\\"');
const Page = () => <div>Hello world</div>;
Page.getInitialProps = () => ({});
const __Next_Translate__Page__88d9831a00__ = Page;

export default __appWithI18n(__Next_Translate__Page__88d9831a00__, {
  ...__i18nConfig,
  isLoader: true,
  skipInitialProps: true,
  loadLocaleFrom: (l, n) =>
    import(\`@next-translate-root/locales/\${l}/\${n}\`).then((m) => m.default),
});
"
`;

exports[`templateWithHoc page without "export default" should skip any transformation skipInitialProps: false 1`] = `
"import __i18nConfig from \\"@next-translate-root/i18n\\";
import __appWithI18n from \\"next-translate/appWithI18n\\";
(\\"$SomeString$\\");
$$SomeString$$ & $SomeString$ & \`$SomeString$\`;
(\\".cssClass{content:' ';\\");
('Hello \\"world\\"');
const Page = () => <div>Hello world</div>;
Page.getInitialProps = () => ({});
const __Next_Translate__Page__88d9831a00__ = Page;

export default __appWithI18n(__Next_Translate__Page__88d9831a00__, {
  ...__i18nConfig,
  isLoader: true,
  skipInitialProps: false,
  loadLocaleFrom: (l, n) =>
    import(\`@next-translate-root/locales/\${l}/\${n}\`).then((m) => m.default),
});
"
`;

exports[`templateWithHoc page without "export default" should skip any transformation skipInitialProps: true 1`] = `
"import __i18nConfig from \\"@next-translate-root/i18n\\";
import __appWithI18n from \\"next-translate/appWithI18n\\";
(\\"$SomeString$\\");
$$SomeString$$ & $SomeString$ & \`$SomeString$\`;
(\\".cssClass{content:' ';\\");
('Hello \\"world\\"');
const Page = () => <div>Hello world</div>;
Page.getInitialProps = () => ({});
const __Next_Translate__Page__88d9831a00__ = Page;

export default __appWithI18n(__Next_Translate__Page__88d9831a00__, {
  ...__i18nConfig,
  isLoader: true,
  skipInitialProps: true,
  loadLocaleFrom: (l, n) =>
    import(\`@next-translate-root/locales/\${l}/\${n}\`).then((m) => m.default),
});
"
`;
